cluster/k8s/monitoring/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: "initial"
    rbac.ducktape.io/agent-readable-logs: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
