cluster/k8s/monitoring/loki/loki.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: initial
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    rbac.ducktape.io/agent-readable-logs: "true"
  name: loki
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-ingress
  namespace: loki
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: s3
            app.kubernetes.io/name: seaweedfs
            k8s:io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            k8s:io.kubernetes.pod.namespace: loki
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "7946"
              protocol: TCP
            - port: "9095"
              protocol: TCP
            - port: "3100"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: promtail
            k8s:io.kubernetes.pod.namespace: loki
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: grafana
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: backend
            app.kubernetes.io/instance: props
            k8s:io.kubernetes.pod.namespace: props
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3500"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gatus
            k8s:io.kubernetes.pod.namespace: gatus
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki-read-proxy
            k8s:io.kubernetes.pod.namespace: loki-read-proxy
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            k8s:io.kubernetes.pod.namespace: loki
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "3100"
              protocol: TCP
            - port: "9095"
              protocol: TCP
            - port: "7946"
              protocol: TCP
